# CrabAgent

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  CHANGELOG.md  CHANGELOG.zh-CN.md  Dockerfile  LICENSE  Makefile  Q  README.md  README.zh-CN.md  crabagent.spec  docker-compose.yml  pyproject.toml
docs/: design-pipeline-persistence.md  design-skill-pipeline.md
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: _analyze.py  _fix_install.py  _install.py  index.html  install-univer.py  install-univer.sh  install.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  pet.css
frontend/src/api/: agents.ts  auth.ts  calendar.ts  chatgpt.ts  client.ts  documents.ts  email.ts  events.ts  files.ts  goals.ts  mcpServers.ts  monitor.ts  notifications.ts  officecli.ts  pets.ts  providers.ts  quota.ts  scheduledTasks.ts  sessions.ts  settings.ts  tasks.ts  time.ts  tokenUsage.ts  wechat.ts
frontend/src/components/: AgentBar.tsx  AgentGrowthChart.tsx  AgentTeamPanel.tsx  AppErrorBoundary.tsx  BranchSelector.tsx  ChatInput.tsx  ChatPanel.tsx  CodePanel.tsx  CodeTabs.tsx  DelegateModal.tsx  DesktopPet.tsx  DirectoryPicker.tsx  DocOutline.tsx  DocToolbar.tsx  DocumentPanel.tsx  DocumentPreview.tsx  DocumentTimeline.tsx  EmailPanel.tsx  FileBrowser.tsx  FileTree.tsx  FtsStatusBar.tsx  GitChanges.tsx  GoalCard.tsx  GoalComposer.tsx  GoalTimeline.tsx  MarkdownPanel.tsx  McpServerPanel.tsx  McpStatusBar.tsx  MeetingPanel.tsx  ModelSelector.tsx  MoltTimeline.tsx  NavBar.tsx  NotificationBell.tsx  PetsSettingsPanel.tsx  PipelineTimeline.tsx  PrototypePanel.tsx  ProviderPanel.tsx  ResultCompare.tsx  ScheduledTaskPanel.tsx  SessionList.tsx  (+11 more)
frontend/src/components/charts/: MeasuredChartContainer.tsx
frontend/src/components/pets/: SpritePet.tsx  index.ts
frontend/src/components/rich-content/: ChartBlock.tsx  MermaidDiagram.tsx  RichMarkdown.tsx  VisualizationFrame.tsx  chartSchema.test.ts  chartSchema.ts  stableVisualization.test.ts  stableVisualization.ts
frontend/src/components/ui/: Button.tsx  CodeBlock.tsx  ConfirmDialog.tsx  Input.tsx  Modal.tsx  State.tsx  Toast.tsx  Tooltip.tsx  index.ts
frontend/src/hooks/: useAuth.ts  useChatState.ts  useModelSelector.ts  useSSE.ts  useSettingsData.ts  useTaskBoard.ts
frontend/src/i18n/: en.json  index.ts  zh-CN.json
frontend/src/lib/: cn.ts  messageTransforms.ts  providerSync.ts  theme-colors.ts  theme.tsx
frontend/src/lib/pets/: petStateMachine.ts
frontend/src/pages/: AgentsPage.tsx  CalendarPage.tsx  ChatPage.tsx  DashboardPage.tsx  LoginPage.tsx  MemoryPage.tsx  SettingsPage.tsx  UsagePage.tsx
frontend/src/types/: ChatMessage.ts  Goal.ts
scripts/: build-desktop.ps1  build-desktop.sh  create-test-pet.py  measure_officecli.py  migrate_memory_scope.py  sync_version.py
src/crabagent/: __init__.py  __main__.py  crabagent-cli.spec  crabagent.spec  runtime_hooks.py
src/crabagent/cli/: __main__.py  tui.py  tui2.py
src/crabagent/core/: __init__.py  config.py  database.py  event.py  fts.py  memory_embed.py  project_memory.py  provider_store.py  proxy.py  tool_loader.py
src/crabagent/core/agent/: agent_switch.py  agents.py  compress.py  context.py  lesson_dedup.py  loop.py  reflect.py  run_recorder.py  token_limits.py
src/crabagent/core/calendar/: __init__.py  ical_sync.py  store.py  tools.py
src/crabagent/core/goals/: __init__.py  scheduler.py  service.py  tools.py
src/crabagent/core/i18n/: __init__.py  en.json  zh-CN.json
src/crabagent/core/mail/: __init__.py  config.py  handler.py  imap.py  matcher.py  smtp.py  tools.py
src/crabagent/core/mcp/: client.py  tools.py
src/crabagent/core/meeting/: __init__.py  tools.py
src/crabagent/core/molt/: rollback.py  snapshot.py  store.py  tools.py
src/crabagent/core/office/: __init__.py  manager.py
src/crabagent/core/pets/: __init__.py  generation.py  models.py  (+1 more)
src/crabagent/electron/: main.js  package.json  preload.js
src/crabagent/serve/: app.py  deps.py  scheduler.py
src/crabagent/static/: index-BH8oniu0.css  index-BRFrb6ox.js  index-DzwOZGf6.css  index.html  officecli-D3v2Nc0L.js  vendor-charts-Ji6WPyEZ.js  vendor-markdown-C0jI_Wfn.js
tests/: test_agent_loop.py  test_agents.py  test_bash_tool.py  test_branching.py  test_calendar_store.py  test_calendar_tools.py  test_compress.py  test_documents_api.py  test_event_bus.py  test_file_tools.py  test_files_api.py  test_goals.py  test_i18n.py  test_image_tools.py  test_mail_tools.py  test_mcp_tools.py  test_memory_dedup.py  test_memory_tools.py  test_message_service.py  test_middlewares.py  test_molt_store.py  test_office_manager.py  test_office_tools.py  test_persistence_listener.py  test_pets_api.py  test_prompt_api.py  test_provider_store.py  test_proxy.py  test_reflect.py  test_run_recorder.py  test_sandbox.py  test_scheduled_task_tools.py  test_scheduler.py  test_settings_api.py  test_shared_store.py  test_shared_tools.py  test_task_store.py  test_task_tools.py  test_todo_store.py  test_token_limits.py  (+3 more)
(+1546 files in other folders)
