[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crabagent"
version = "0.12.3"
description = "CrabAgent - AI Agent Platform with dual-mode (CLI + Serve)"
readme = "README.md"
license = {text = "Commercial"}
requires-python = ">=3.12"
authors = [
    {name = "Xie Congling", email = "xcl1989@live.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "litellm>=1.40",
    "httpx>=0.27",
    "lxml>=6.1.1",
    "scrapling>=0.4.9",
    "ddgs>=7.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<5.0",
    "mcp>=1.0",
    "apscheduler>=3.10",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "redis>=5.0",
    "icalendar>=5.0",
    "jieba>=0.42",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
memory = [
    "sentence-transformers>=3.0",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
crabagent = "crabagent.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/xcl1989/CrabAgent"
Repository = "https://github.com/xcl1989/CrabAgent"
Issues = "https://github.com/xcl1989/CrabAgent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/crabagent"]

[tool.hatch.build.targets.sdist]
exclude = [
    "electron/node_modules",
    "electron/dist-electron",
    "electron/resources",
    "src/crabagent/electron/node_modules",
    "src/crabagent/electron/dist-electron",
    "src/crabagent/electron/resources",
    "*.dmg",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
